fixed nav alignment issues

--- a/src/app/shared/components/nav/nav.component.scss
+++ b/src/app/shared/components/nav/nav.component.scss
@@ -1,3 +1,10 @@
 span a {
   float: right;
 }
+.navbar{
+  justify-content: space-between;
+}
+.logo{
+  display: flex;
+  align-items: center;
+}
